# rpc-agent-custom

./: Cargo.toml  README.md
examples/server/: Cargo.toml
examples/server/src/: main.rs
examples/tools_example/: Cargo.toml
examples/tools_example/src/: main.rs
src/: agent.rs  auth.rs  builder.rs  error.rs  jwt.rs  lib.rs  message.rs  tools.rs
src/providers/: local_inference.rs  mod.rs  ollama.rs  openai.rs  sagemaker.rs
src/tests/: auth.rs  local_inference.rs  mock_test.rs  mod.rs  unit.rs  unit_error.rs
