[package]
name = "grpc-agent-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
rpc-agent = { version = "0.1.0", path = "../../../rpc-agent" }

rig-core = "0.33.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
